tests/ui/auto-traits/feature-gate.stderr
error[E0658]: `#[rustc_auto_trait]` is used to mark auto traits, only intended to be used in `core`
  --> $DIR/feature-gate.rs:3:1
   |
LL | #[rustc_auto_trait]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
